This is a viewer, not an editor.

--- a/Info.plist.erb
+++ b/Info.plist.erb
@@ -8,7 +8,7 @@
             <key>NSDocumentClass</key>
             <string>Book</string>
             <key>CFBundleTypeRole</key>
-            <string>Editor</string>
+            <string>Viewer</string>
             <key>CFBundleTypeName</key>
             <string>Plain text</string>
 			<key>CFBundleTypeIconFile</key>
