Renamed Book, Window classes to avoid potential conflicts.

--- a/Info.plist.erb
+++ b/Info.plist.erb
@@ -6,7 +6,7 @@
     <array>
         <dict>
             <key>NSDocumentClass</key>
-            <string>Book</string>
+            <string>HBook</string>
             <key>CFBundleTypeRole</key>
             <string>Viewer</string>
             <key>CFBundleTypeName</key>
